--- a/pages/person/relationship/lisProficional.html
+++ b/pages/person/relationship/lisProficional.html
@@ -45,7 +45,7 @@ Coded by www.creative-tim.com
           <!-- <p>CT</p> -->
         </a>
         <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-          MED-center principal
+          MED-center
           <!-- <div class="logo-image-big">
             <img src="../../assets/img/logo-big.png">
           </div> -->
@@ -54,7 +54,7 @@ Coded by www.creative-tim.com
       <div class="sidebar-wrapper">
         <ul class="nav">
           <li>
-            <a href="../dashboard.html">
+            <a href="../../dashboard.html">
               <i class="nc-icon nc-bank"></i>
               <p>Inicio</p>
             </a>
@@ -174,7 +174,7 @@ Coded by www.creative-tim.com
             <div class="col-md-12">
                 <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Pessoas Cadastradas</h4>
+                    <h4 class="card-title">Contatos Profissionais</h4>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
@@ -188,7 +188,7 @@ Coded by www.creative-tim.com
                         <th>Telefone</th>
                       </thead>
                       <tbody>
-                        <tr>
+                        <!--<tr>
                             <td><a href="user.html"> Murilo Pereira</a></td>
                             <td>1651AD</td>
                             <td>murilo.ps0690@gmail.com</td>
@@ -211,11 +211,11 @@ Coded by www.creative-tim.com
                             <td>Programador</td>
                             <td>24/03/2020</td>
                             <td>(14) 99654-4905</td>
-                        </tr>
+                        </tr>-->
                       </tbody>
                     </table>
                     <p class="lead">
-                      <a class="btn btn-primary btn-lg" href="./contact.html" role="button">Adicionar Pessoa</a>
+                      <a class="btn btn-primary btn-lg" href="./form/proficional.html" role="button">Adicionar Proficional</a>
                     </p>
                   </div>
                 </div>
