--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -179,19 +179,18 @@ Coded by www.creative-tim.com
                 </div>
               </div>
               <div class="card-body">
-                <div class="card-body">
-                  <ul class="list-unstyled team-members">
-                    <li>
-                      <div class="row">
-                        <div class="col-md-7 col-7">
-                        </div>
-                        <div class="col-md-3 col-3 text-right">
-                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a>></btn>
-                        </div>
+                <ul class="list-unstyled team-members">
+                  <li>
+                    <div class="row">
+                      <div class="col-md-7 col-7">
+                        Código: 1551
                       </div>
-                    </li>
-                  </a>
-                </div>
+                      <div class="col-md-3 col-3 text-right">
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
+                      </div>
+                    </div>
+                  </li>
+                </a>
               </div>
             </div>
             <div class="card">
@@ -212,7 +211,7 @@ Coded by www.creative-tim.com
                           <br/>
                         </div>
                         <div class="col-md-3 col-3 text-right">
-                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="relationship/listRelationCont.html"><i class="fa fa-envelope"></i></a></btn>
                         </div>
                       </div>
                     </li>
@@ -236,7 +235,7 @@ Coded by www.creative-tim.com
                         <small>Fim:</small>
                       </div>
                       <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listFunctionary.html"><i class="fa fa-envelope"></i></a></btn>
                       </div>
                     </div>
                   </li>
@@ -255,7 +254,7 @@ Coded by www.creative-tim.com
                       <b>Sem registro</b>
                     </div>
                     <div class="col-md-3 col-3 text-right">
-                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
+                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/lisProficional.html"><i class="fa fa-envelope"></i></a></btn>
                     </div>
                   </div>
                 </li>
