--- a/pages/person/relationship/form/proficional.html
+++ b/pages/person/relationship/form/proficional.html
@@ -186,6 +186,16 @@
                             </div>
                     </div>
                     <div class="form-row">
+                      <div class="form-group col-md-4">
+                        <label for="inputConcel">Conselho</label>
+                        <select id="inputConcel" class="form-control">
+                          <option selected>Selecione...</option>
+                          <option>CRM</option>
+                          <option>CREFITO</option>
+                          <option>COREN</option>
+                          <option>CRP</option>
+                        </select>
+                      </div>
                         <div class="form-group col-md-4">
                             <label for="inputNumber">Data de Inicio</label>
                             <input type="number" class="form-control" id="inputNumber" placeholder="dd/mm/aaaa">
