tentei corrigir os erros que apareciam nas paginas

--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -72,7 +72,7 @@ Coded by www.creative-tim.com
             </a>
           </li>
           <li>
-            <a href="./notifications.html">
+            <a href="#">
               <i class="nc-icon nc-bell-55"></i>
               <p>Notificações</p>
             </a>
@@ -90,13 +90,13 @@ Coded by www.creative-tim.com
             </a>
           </li>
           <li>
-            <a href="../../examples/typography.html">
+            <a href="#">
               <i class="nc-icon nc-caps-small"></i>
               <p>Typography</p>
             </a>
           </li>
           <li class="active-pro">
-            <a href="./upgrade.html">
+            <a href="#">
               <i class="nc-icon nc-spaceship"></i>
               <p>Upgrade to PRO</p>
             </a>
@@ -186,7 +186,7 @@ Coded by www.creative-tim.com
                         Código: 1551
                       </div>
                       <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="#"><i class="fa fa-envelope"></i></a></btn>
                       </div>
                     </div>
                   </li>
