--- a/pages/companies/form.html
+++ b/pages/companies/form.html
@@ -155,7 +155,7 @@
             </div>
             </div>
         </nav>
-    <div class="container">
+    <div class="container" style="margin-top: 75px;">
         <div class="row justify-content-center">
             <div class="card col-sm-12 " id="card-login">
                 <div class="card-header">
@@ -165,12 +165,12 @@
                 <form>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inputEmail4">Email da Empresa</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Insira o Email">
+                            <label for="inputEmpName">Nome da Empresa</label>
+                            <input type="text" class="form-control" id="inputName" placeholder="Insira o nome da Empresa">
                         </div>
                         <div class="form-group col-md-6">
-                        <label for="inputEmpName">Nome da Empresa</label>
-                        <input type="text" class="form-control" id="inputPassword4" placeholder="Insira o nome da Empresa">
+                            <label for="inputEmail4">Email da Empresa</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Insira o Email">
                         </div>
                     </div>
                     <div class="form-row">
