--- a/pages/person/formUser.html
+++ b/pages/person/formUser.html
@@ -155,7 +155,7 @@
             </div>
             </div>
         </nav>
-    <div class="container">
+    <div class="container" style="margin-top: 75px;">
         <div class="row justify-content-center">
             <div class="card col-sm-12 " id="card-login">
                 <div class="card-header">
@@ -189,18 +189,18 @@
                         <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Av. Castro Alves, 322">
                       </div>
                       <div class="form-group col-md-6">
-                        <label for="inputCPF">CPF</label>
-                        <input type="number" class="form-control" id="inputCPF" placeholder="Insira o CPF">
+                        <label for="inpuntComp">Complemento</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Casa 71">
                       </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inpuntComp">Complemento</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Casa 71">
+                          <label for="inputCPF">CPF</label>
+                          <input type="number" class="form-control" id="inputCPF" placeholder="Insira o CPF">
                         </div>
                         <div class="form-group col-md-6">
                           <label for="inputCEP">CEP</label>
-                            <input type="text" class="form-control" id="inputAddress">
+                          <input type="text" class="form-control" id="inputAddress">
                         </div>
                     </div>
                     </div>
