--- a/pages/person/relationship/form/contact.html
+++ b/pages/person/relationship/form/contact.html
@@ -153,7 +153,7 @@
                 </ul>
             </div>
         </nav>
-    <div class="container">
+    <div class="container" style="margin-top: 75px;">
         <div class="row justify-content-center">
             <div class="card col-sm-12 " id="card-login">
                 <div class="card-header">
